Fix cell rounding bug
Bug seems to appear because of the cell size calculations
When canvas height is divide by cells in a row number, sometimes
the resulting value is too big, so canvas wraps the row without
the last cell, which results in a gap at the right
and a cell overflow at the bottom of the canvas.
Simple rounding does not help since sometimes it rounds the size to
the value too low,
resulting in the same gap on the right(more narrow gap but still)
and an underflow at the bottom(cells do not fill up the last row fully)

As a temporary solution was used an empiric formula:
roundingError = 1 / (n * cellsInARow);
cellSize = canvasWidth / cellsInARow - roundingError;
This formula helped me to minimize the gap at the right to around 0.5px
in a worst case, and prevent underflow and overflow of the cells*

The n value in the formula may vary, but "magic number" 3 was the best
in my case: that is when canvas width is set to 90%
and aspect ratio is 1/1.

* - When used in browser fullscreen mode. Changing the cell count in
windowed mode and reverting back to fullscreen still results in tearing.

--- a/styles.css
+++ b/styles.css
@@ -28,19 +28,20 @@ body
 
 .canvas
 {
-    height: 80%;
+    height: 90%;
     aspect-ratio: 1 / 1;
     margin: 0;
     padding: 0;
     display: flex;
     flex-wrap: wrap;
-    border: 3px solid darkslategray;
+    border: 5px solid darkslategray;
 }
 
 .cell
 {
     margin: 0;
     padding: 0;
+    flex: 0 0 auto;
     border: 1px solid darkslategray;
 }
 
